update grants number and keywords

--- a/origin/manuscripts/tmi.tex
+++ b/origin/manuscripts/tmi.tex
@@ -44,7 +44,7 @@
 			project 500888779 in the Research Unit RU5534
 			for MR biosignatures at UHF,
 			and by the National Institutes of Health (NIH)
-			under grants R01 EB024532 and P41 EB017183.
+			under grants R01EB024532 and P41EB017183.
 			In addition, scientific support and HPC resources
 			were provided by
 			the Erlangen National High Performance Computing Center (NHR)
@@ -90,7 +90,7 @@
 	\end{abstract}
 
 	\begin{IEEEkeywords}
-	Diffusion-weighted imaging, Image reconstruction, Generative AI, Latent space, Self-supervised learning
+	Diffusion weighted imaging, Magnetic resonance imaging, Image reconstruction, End-to-end learning in medical imaging, Machine learning
 	\end{IEEEkeywords}
 
 	% ============================== %
